only showing datepicker where necessary

--- a/webservice/templates/campaign_grid.html
+++ b/webservice/templates/campaign_grid.html
@@ -47,4 +47,13 @@ tmax_local_time = moment(tmax_local_time).format('YYYY-MM-DD HH:mm');
 $( ".tmax" ).html( tmax_local_time );
 </script>
 
+
+
+
+<script>
+$(function() {
+    $('#global_datepicker_container').show();
+});
+</script>
+
 {%endblock%}
