--- a/webservice/templates/job_count_table.html
+++ b/webservice/templates/job_count_table.html
@@ -62,4 +62,13 @@ Jobs by exitcode for {{time_range_string}}
   </tbody>
 </table>
 
+
+
+
+
+<script>
+$(function() {
+    $('#global_datepicker_container').show();
+});
+</script>
 {%endblock%}
