--- a/webservice/templates/job_table.html
+++ b/webservice/templates/job_table.html
@@ -305,4 +305,13 @@ $( "#search_button" ).click(function() {
 </div>
 </script>
 
+
+
+
+
+<script>
+$(function() {
+    $('#global_datepicker_container').show();
+});
+</script>
 {%endblock%}
