--- a/webservice/templates/campaign_bars.html
+++ b/webservice/templates/campaign_bars.html
@@ -55,4 +55,11 @@ $( ".tmax" ).html( tmax_local_time );
 
 
 
+
+<script>
+$(function() {
+    $('#global_datepicker_container').show();
+});
+</script>
+
 {%endblock%}
