--- a/webservice/templates/campaign_sheet.html
+++ b/webservice/templates/campaign_sheet.html
@@ -57,4 +57,13 @@
   </tbody>
 </table>
 
+
+
+
+
+<script>
+$(function() {
+    $('#global_datepicker_container').show();
+});
+</script>
 {%endblock%}
