--- a/webservice/templates/service_statuses.html
+++ b/webservice/templates/service_statuses.html
@@ -33,7 +33,7 @@
 
 {%block content%}
 	
-	<button class="ui button">Component(failed/total) Icon</button> 
+	<button class="ui button">Component(failed/total)<i class="link help circle icon"></i></button> 
 
 	   {{services}} 
 
