--- a/webservice/templates/job_table.html
+++ b/webservice/templates/job_table.html
@@ -31,7 +31,10 @@
     Jobs
 </h1>
 <div class="ui subheader">
-Jobs for {{time_range_string}}
+<!-- Jobs for {{time_range_string}} -->
+    <div class="ui basic label">
+      <i class="wait icon"></i>  <div class="tmin" style="display:inline;"></div> to <div class="tmax" style="display:inline;"></div>
+    </div>
 </div>
 
 <a href="{{prev}}">&lt;previous {{days}} days</a> | 
@@ -311,6 +314,23 @@ $( "#search_button" ).click(function() {
 </table>
 </div>
 </script>
+
+
+
+
+
+
+<script>
+
+var tmin_local_time = moment.utc('{{tmin}}').toDate();
+tmin_local_time = moment(tmin_local_time).format('YYYY-MM-DD HH:mm');
+$( ".tmin" ).html( tmin_local_time );
+var tmax_local_time = moment.utc('{{tmax}}').toDate();
+tmax_local_time = moment(tmax_local_time).format('YYYY-MM-DD HH:mm');
+$( ".tmax" ).html( tmax_local_time );
+
+</script>
+
 
 
 
