added back link to oops page

--- a/webservice/templates/error_response.html
+++ b/webservice/templates/error_response.html
@@ -2,16 +2,6 @@
 
 {%block title%}
     <title>POMS</title>
-
-    <style type="text/css">
-    div.scrollable {
-        width: 100%;
-        overflow-x: scroll;
-    }
-    div.scrollable table {
-        width: 300%;
-    }
-    </style>
 {%endblock%}
 
 {%block breadcrumbs%}
@@ -29,6 +19,7 @@
 {%endblock%}
 
 {%block subheader%}
+<a href="javascript:history.go(-1)">+ Return to Previous Page</a>
 {%endblock%}
 
 {%block content%}
