popups for active campaigns

--- a/webservice/templates/campaign_grid.html
+++ b/webservice/templates/campaign_grid.html
@@ -49,6 +49,19 @@ $( ".tmax" ).html( tmax_local_time );
 
 
 
+<script>
+$('.external')
+  .popup({
+    inline   : true,
+    hoverable: true,
+    delay: {
+      show: 300,
+      hide: 80
+    }
+  })
+;
+</script>
+
 
 <script>
 $(function() {
