better label for service statuses

--- a/webservice/templates/service_statuses.html
+++ b/webservice/templates/service_statuses.html
@@ -33,7 +33,12 @@
 
 {%block content%}
 	
-	<button class="ui button">Component(failed/total)<i class="link help circle icon"></i></button> 
+	<!--<button class="ui button">Component(failed/total)<i class="link help circle icon"></i></button>-->
+<div class="ui black label">
+  Component &nbsp; (failed/total) <i class="link help circle icon"></i>
+</div>
+<br/>
+<br/>
 
 	   {{services}} 
 
