breadcrumb fixes round 1

--- a/webservice/templates/calendar.html
+++ b/webservice/templates/calendar.html
@@ -18,7 +18,7 @@
 
 {%block header%}
 <h1 class="ui header">
-     Downtime Calendar                               
+     Downtime Calendar {%include 'help_button.html'%}
     <div class="sub header">
         view service downtimes
     </div>
