--- a/webservice/templates/campaign_sheet.html
+++ b/webservice/templates/campaign_sheet.html
@@ -16,7 +16,7 @@
 
 {%block header%}
 <h1 class="ui header">
-  Info by day
+  Info by day{%include 'help_button.html'%}
 </h1>
 <div class="ui subheader">
 {{days}} Days ending  {{tmax}}
