--- a/webservice/templates/edit_screen.html
+++ b/webservice/templates/edit_screen.html
@@ -23,7 +23,7 @@
 
 {%block header%}
 <h1 class="ui header">
-         {{clasname}} Items
+         {{clasname}} Items{%include 'help_button.html'%}
                     
           <div class="sub header">
               Edit {{classname}} Item
