--- a/webservice/templates/experiment_edit.html
+++ b/webservice/templates/experiment_edit.html
@@ -24,7 +24,7 @@
 
 {%block header%}
 <h1 class="ui header">
-    Experiment Authorization
+    Experiment Authorization{%include 'help_button.html'%}
 </h1>
 {%endblock%}
 
