--- a/webservice/templates/job_file_contents.html
+++ b/webservice/templates/job_file_contents.html
@@ -26,7 +26,7 @@
 
 {%block header%}
 <h1 class="ui header">
-         Job Triage
+         Job Triage{%include 'help_button.html'%}
                     
           <div class="sub header">
               triage your jobs
