--- a/webservice/templates/job_table.html
+++ b/webservice/templates/job_table.html
@@ -28,7 +28,7 @@
 
 {%block header%}
 <h1 class="ui header">
-    Jobs
+    Jobs{%include 'help_button.html'%}
 </h1>
 <div class="ui subheader">
 <!-- Jobs for {{time_range_string}} -->
