--- a/webservice/templates/service_downtimes.html
+++ b/webservice/templates/service_downtimes.html
@@ -20,7 +20,7 @@
 
 {%block header%}
 <h1 class="ui header">
-         Service Downtimes
+         Service Downtimes {%include 'help_button.html'%}
                     
           <div class="sub header">
               view and sort all downtimes
