--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -9,7 +9,8 @@
 <div class="ui breadcrumb" style="margin-top: -45px;">
   <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <div class="section">Campaigns</div>
+  <div class="section"> <a href="{{pomspath}}/show_campaigns">Campaigns</a></div>
+  <div class="divider"> / </div>
   <div class="section">{{campaign.name}}</div>
 </div>
 {%endblock%}
@@ -17,7 +18,7 @@
 
 {%block header%}
 <h1 class="ui header">
-     Campaigns
+     Campaigns{%include 'help_button.html'%}
 </h1>
 {%endblock%}
 
