--- a/webservice/templates/job_count_table.html
+++ b/webservice/templates/job_count_table.html
@@ -18,7 +18,7 @@
 
 {%block header%}
 <h1 class="ui header">
-    Jobs by Exitcode
+    Jobs by Exitcode{%include 'help_button.html'%}
 </h1>
 <div class="ui subheader">
 <!-- Jobs by exitcode for {{time_range_string}} -->
