--- a/webservice/templates/list_screen.html
+++ b/webservice/templates/list_screen.html
@@ -22,7 +22,7 @@
 
 {%block header%}
 <h1 class="ui header">
-     {{clasname}} Items
+     {{clasname}} Items{%include 'help_button.html'%}
                     
      <div class="sub header">
          View/Edit {{classname}} Items
