--- a/webservice/templates/raw_tables.html
+++ b/webservice/templates/raw_tables.html
@@ -8,7 +8,7 @@
 <div class="ui breadcrumb" style="margin-top:-45px;">
   <a href= "{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <div class="section">DB Admin</div>
+  <div class="section">Raw Tables</div>
 </div>
 {%endblock%}
 
@@ -18,7 +18,7 @@
 
 {%block header%}
 <h1 class="ui header">
-     DB Admin
+     DB Admin{%include 'help_button.html'%}
     <div class="sub header">
         update database tables directly
     </div>
