--- a/webservice/templates/service_statuses.html
+++ b/webservice/templates/service_statuses.html
@@ -13,7 +13,7 @@
 
 {%block header%}
 <h1 class="ui header">
-    Dashboard                                 
+    Dashboard{%include 'help_button.html'%}
     <div class="sub header">
         See everything up and running in real time
     </div>
