breadcrumbs once more...

--- a/webservice/templates/edit_screen.html
+++ b/webservice/templates/edit_screen.html
@@ -8,7 +8,7 @@
 <div class="ui breadcrumb" style="margin-top: -45px;">
   <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <a class="section">DB Admin</a>
+  <a class="section" href="{{pomspath}}/raw_tables">Raw Tables</a>
   <div class="divider"> / </div>
   <a href="{{pomspath}}/list_generic?classname={{classname}}" class="section">{{classname}}</a>
   <div class="divider"> / </div>
