--- a/webservice/templates/list_screen.html
+++ b/webservice/templates/list_screen.html
@@ -9,15 +9,11 @@
 <div class="ui breadcrumb" style="margin-top:-45px;">
   <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <a href="{{pomspath}}/admin_screen" class="section">DB Admin</a>
+  <a href="{{pomspath}}/raw_tables" class="section">Raw Tables</a>
   <div class="divider"> / </div>
   <div class="section">{{classname}}</div>
 </div>
 {%endblock%}
-
-
-
-
 
 
 {%block header%}
