--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -93,7 +93,7 @@
                     <a class="item" href="{{pomspath}}/experiment_edit">
                         Experiments
                     </a>
-                    <a class="item" href="{{pomspath}}/user_auth">
+                    <a class="item" href="{{pomspath}}/user_edit">
                         Users
                     </a>
                     <a class="item" href="{{pomspath}}/raw_tables">
@@ -205,7 +205,7 @@
                     <a class="item" href="{{pomspath}}/experiment_edit">
                         Experiments
                     </a>
-                    <a class="item" href="{{pomspath}}/user_auth">
+                    <a class="item" href="{{pomspath}}/user_edit">
                         Users
                     </a>
                     <a class="item" href="{{pomspath}}/raw_tables">
