--- a/webservice/templates/experiment_edit.html
+++ b/webservice/templates/experiment_edit.html
@@ -45,9 +45,26 @@ function submit_exp_form() {
 function pop_add_experiment_modal() {
     mod_form = $("#add_experiment_modal").modal('show');  
 }
+
+function pop_experiment_users_modal(experiment) {
+
+    var formdata = {'experiment': experiment};
+    $.ajax({
+            url: "{{pomspath}}/experiment_members", 
+            type: 'GET',
+            data: formdata,
+            success: function(trows){
+              $("#table_row_experiment_users_modal").html(trows);
+              $("#header_experiment_users_modal").text("Experimenters List: " + experiment);
+              mod_form = $("#experiment_users_modal").modal('show');  
+            }
+    });
+
+}
+
 </script>
 
-<div class="ui {{ 'disabled' if (not current_experimenter.is_root()) }} teal button"onclick="pop_add_experiment_modal()" >Add Experiment</div>
+<div class="ui {{ 'disabled' if (not current_experimenter.is_root()) }} teal button" onclick="pop_add_experiment_modal()" >Add Experiment</div>
 <div class="ui hidden divider"></div>
 <form id="exp_form" class="ui form" action="experiment_authorize" method="POST">
   <table class="ui celled table">
@@ -56,6 +73,7 @@ function pop_add_experiment_modal() {
 	<th>Delete</th>
 	<th>Short Name</th>
 	<th>Full Name</th>
+	<th>Roster</th>
       </tr>
     </thead>
     <tbody>
@@ -73,12 +91,20 @@ function pop_add_experiment_modal() {
 	</td>
 	<td>{{row.experiment}}</td>
 	<td>{{row.name}}</td>
+	<td>
+	  <div class="ui labeled button" onclick="pop_experiment_users_modal('{{row.name}}')">
+	    <div class="ui teal button">
+	      <i class="user icon"></i>
+	      <i class="user icon"></i>
+	    </div>
+	  </div>
+	</td>
       </tr>
      {% endfor %}
     </tbody>
     <tfoot>
       <tr>
-	<th colspan="3">
+	<th colspan="4">
 	  <input id="exp_btn_submit" type="button" class="ui {{ 'disabled' if (not current_experimenter.is_root()) }} teal button" value="Submit" 
                  onclick="pop_confirm_modal()">
 	</th>
@@ -145,6 +171,32 @@ function pop_add_experiment_modal() {
       </div>
     </div>
     <div class="ui hidden divider"></div>
+</div> <!-- Ends Modal -->
+
+<div class="ui modal" id="experiment_users_modal">
+  <i class="close icon"></i>
+  <div id="header_experiment_users_modal" class="header">
+    Set me!
+  </div>
+  <table class="ui celled table">
+    <thead>
+      <tr>
+	<th>First Name</th>
+	<th>Last Name</th>
+	<th>Email</th>
+	<th>Active</th>
+      </tr>
+    </thead>
+    <tbody id="table_row_experiment_users_modal">
+	<tr>
+	  <td>Joe</td>
+	  <td>Bob's</td>
+	  <td>Fishing and Bait</td>
+	  <td>Emporium</td>
+	</tr>
+    </tbody>
+  </table>
+  <div class="ui hidden divider"></div>
 </div> <!-- Ends Modal -->
 
 <script>
