rough draft of jump to job

--- a/webservice/templates/service_statuses.html
+++ b/webservice/templates/service_statuses.html
@@ -32,6 +32,10 @@
 
 
 {%block content%}
+  <form action="jump_to_job" method="GET">
+    <input type="text" name="jobsub_jobid">
+    <input type="submit" name="Jump To Job">
+ </job>
 	
 	<!--<button class="ui button">Component(failed/total)<i class="link help circle icon"></i></button>-->
 <div class="ui black label">
