TaskDef to CampaignDef change I missed.

--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -165,7 +165,7 @@
       <tr>
         <td>Task Def Name</td>
         <td>
-          <p>{{job_info.TaskDefinition.name}}</p>
+          <p>{{job_info.CampaignDefinition.name}}</p>
         </td>
       </tr>
       <tr>
