working a bit better...

--- a/webservice/templates/launched_jobs.html
+++ b/webservice/templates/launched_jobs.html
@@ -1,7 +1,7 @@
 {%extends "layout.html" %}
 
 {%block title%}
-    <title>Kill Jobs Results</title>
+    <title>Launch Jobs Results</title>
 {%endblock%}
 
 {%block breadcrumbs%}
@@ -9,7 +9,7 @@
        Dashboard  <!--label of current location on mobile-->
     </div>
     <div class="item">
-      Kill jobs result<!--label of current location on mobile-->
+      Launch jobs result<!--label of current location on mobile-->
     </div>
 {%endblock%}
 
@@ -18,7 +18,7 @@
          Results {%include 'help_button.html'%}
                     
           <div class="sub header">
-              Output of jobsub_rm
+              Output of submit command
           </div>
 </h1>
 {%endblock%}
