--- a/webservice/templates/campaign_bars.html
+++ b/webservice/templates/campaign_bars.html
@@ -37,16 +37,61 @@
 
 
 {%block content%}
-  <div class="ui grid">
-    {{screendata}}
+
+   <h2 class="ui row dividing header">{{name}} Tasks </h2>
+
+   <div class="ui grid">
+   <div class="ui row">
+     {{job_counts}}
+   </div>
+   </div>
+
+
+   <div class="ui grid">
+      <div class='ui row'>
+       <div class="left floated left aligned six wide column tmin"></div>
+       <div class="right floated right aligned six wide column tmax"></div>
+     </div>
+
+         {% for id,plist in blob.pmap.items() %}
+             {% if plist|length > 0 %}
+
+              <div class='row' style='margin:0px 0px; padding:0px 0px;'>
+                 <div class='mwm_label' style='text-align: right; width: 14%; float:left; padding: 5px 5px; border-right: 1px solid black; '>
+                    {{id}}{{blob.extramap.id}}
+                  </div>
+                  <div clas='mwm_rowdata'  style='position: relative; width: 85%; float:left; clear: right; border-right: 1px solid black; border-left: 1px solid black; padding: 5px 0px'>
+
+                    {%for p in plist %}
+
+                       <a href='{{p.url}}'>
+                         <div class='tbox' data-content='{{p.txt}}' data-variation="very wide" style='width: {{p.width}}%; background-color: {{p.color}} !important; float:left; '>
+                           &nbsp;
+                         </div>
+                       </a>
+
+                    {%endfor%}
+
+                  </div>
+                  &nbsp;
+               </div>
+              {% endif %}
+            {% endfor %}
+
+
+
     <div class='ui row'>
      <div class="left floated left aligned six wide column tmin"></div>
      <div class="right floated right aligned six wide column tmax"></div>
    </div>
   </div>
 
-
-
+   <h2>Key:</h2>
+   <div class="ui grid">
+   <div class="ui row">
+     {{key}}
+   </div>
+   </div>
 
 
 <script>
