Changes to support web form for layout_templates.

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -168,16 +168,6 @@
         </div>
         
         
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
         <!--big screen menu-->
         
         <div class="pusher">
@@ -235,6 +225,9 @@
                 </a>
                 <a class="item" href="{{pomspath}}/campaign_definition_edit">
                   Compose Definition
+                </a>
+                <a class="item" href="{{pomspath}}/launch_template_edit">
+                  Compose Launch Template
                 </a>
 	      </div>
             </div>
