--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -37,6 +37,7 @@
 
             <script src='{{pomspath}}/static/js/jquery-ui.js'></script>
             <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/datepicker.css">
+
     </head>
     
     
@@ -231,7 +232,7 @@
                 </a>
 	      </div>
             </div>
-                        
+
             <div class="item">
               <div class="header">Jobs</div>
 	      <div class="menu">
@@ -393,6 +394,7 @@ function validateQuickSearchForm(formid)
 $( ".requests" ).click(function() {
   $('#under_construction').modal('show');
 });
+
 </script>
 
 
@@ -419,6 +421,9 @@ $('.tbox_delayed')
     }
   })
 ;
+
+$("#spw").dropdown();
+
 </script>
 
 
