--- a/webservice/templates/campaign_grid.html
+++ b/webservice/templates/campaign_grid.html
@@ -85,7 +85,7 @@
             <a href="{{pomspath}}/jobs_eff_histo?campaign_id={{c.campaign_id}}&tmax={{tmaxs}}"><i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i></a>
             <a href="{{pomspath}}/campaign_sheet?campaign_id={{c.campaign_id}}&tmax={{tmaxs}}"><i class="external table icon" data-content="Campaign Spreadsheet" data-variation="basic"></i></a>
             <a href="{{pomspath}}/campaign_time_bars?campaign_id={{c.campaign_id}}&tmin={{tmins}}&tmax={{tmaxs}}"><i class="external tasks icon" data-content="Tasks in Campaign Time Bars" data-variation="basic"></i></a>
-            <a href="{{pomspath}}/pending_files?campaign_id={{c.campaign_id}}"><i class="external file icon" data-content="Pending File Information" data-variation="basic"></i></a>
+            <a href="{{pomspath}}/inflight_files?campaign_id={{c.campaign_id}}"><i class="external file icon" data-content="In-Flight File Information" data-variation="basic"></i></a>
             <a href="{{pomspath}}/campaign_info?campaign_id={{c.campaign_id}}"><i class="external info circle icon" data-content="Campaign Information" data-variation="basic"></i></a>
             <a target="_blank" href="{{pomspath}}/launch_jobs?campaign_id={{c.campaign_id}}"><i class="external rocket icon" data-content="Launch Tasks for Campaign" data-variation="basic"></i></a>
             <a target="_blank" href="{{pomspath}}/kill_jobs?campaign_id={{c.campaign_id}}"><i class="external trash icon" data-content="Kill jobs in Campaign" data-variation="basic"></i></a>
