--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -125,11 +125,17 @@
                     <a class="item" href="{{pomspath}}/job_table?tdays=1">
                         All (Last Day)
                     </a>
-                    <a class="item" href="{{pomspath}}/jobs_by_exitcode?tdays=1">
-                        By Exit Code (Last Day)
+                    <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=1&f=user_exe_exit_code&f=name">
+                        Failed_By Exit Code and Campaign Name (Last Day)
                     </a>
-                    <a class="item" href="{{pomspath}}/jobs_by_exitcode?tdays=7">
-                        By Exit Code (Last Week)
+                    <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=7&f=user_exe_exit_code&f=name">
+                        Failed_By Exit Code and Campaign Nmae (Last Week)
+                    </a>
+                    <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=1&f=user_exe_exit_code&f=node_name">
+                        Failed_By Exit Code and Node Name (Last Day)
+                    </a>
+                    <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=1&f=user_exe_exit_code&f=cpu_type">
+                        Failed_By Exit Code and CPU Type(Last Day)
                     </a>
                 </div>
             </div>
@@ -238,12 +244,18 @@
 		<a class="item" href="{{pomspath}}/job_table?tdays=1">
 		  All (Last Day)
 		</a>
-		<a class="item" href="{{pomspath}}/jobs_by_exitcode?tdays=1">
-		  By Exit Code (Last Day)
-		</a>
-		<a class="item" href="{{pomspath}}/jobs_by_exitcode?tdays=7">
-					By Exit Code (Last Week)
-		</a>
+                    <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=1&f=user_exe_exit_code&f=name">
+                        Failed_By Exit Code and Campaign Name (Last Day)
+                    </a>
+                    <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=7&f=user_exe_exit_code&f=name">
+                        Failed_By Exit Code and Campaign Nmae (Last Week)
+                    </a>
+                    <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=1&f=user_exe_exit_code&f=node_name">
+                        Failed_By Exit Code and Node Name (Last Day)
+                    </a>
+                    <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=1&f=user_exe_exit_code&f=cpu_type">
+                        Failed_By Exit Code and CPU Type(Last Day)
+                    </a>
 	      </div>
             </div>
                         
