--- a/webservice/templates/campaign_grid.html
+++ b/webservice/templates/campaign_grid.html
@@ -81,14 +81,41 @@
 
      {% for c in cl %}
             <tr>
-            <td style="width: 8em">
-            <a href="{{pomspath}}/jobs_eff_histo?campaign_id={{c.campaign_id}}&tmax={{tmaxs}}"><i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i></a>
-            <a href="{{pomspath}}/campaign_sheet?campaign_id={{c.campaign_id}}&tmax={{tmaxs}}"><i class="external table icon" data-content="Campaign Spreadsheet" data-variation="basic"></i></a>
-            <a href="{{pomspath}}/campaign_time_bars?campaign_id={{c.campaign_id}}&tmin={{tmins}}&tmax={{tmaxs}}"><i class="external tasks icon" data-content="Tasks in Campaign Time Bars" data-variation="basic"></i></a>
-            <a href="{{pomspath}}/inflight_files?campaign_id={{c.campaign_id}}"><i class="external file icon" data-content="In-Flight File Information" data-variation="basic"></i></a>
-            <a href="{{pomspath}}/campaign_info?campaign_id={{c.campaign_id}}"><i class="external info circle icon" data-content="Campaign Information" data-variation="basic"></i></a>
-            <a target="_blank" href="{{pomspath}}/launch_jobs?campaign_id={{c.campaign_id}}"><i class="external rocket icon" data-content="Launch Tasks for Campaign" data-variation="basic"></i></a>
-            <a target="_blank" href="{{pomspath}}/kill_jobs?campaign_id={{c.campaign_id}}"><i class="external trash icon" data-content="Kill jobs in Campaign" data-variation="basic"></i></a>
+            <td style="width: 6em">
+            <div class="ui left pointing dropdown icon button">
+             <i class="configure icon"></i>
+             <i class="dropdown icon"></i>
+             <div class=menu>
+              <div class=item>
+                <a href="{{pomspath}}/jobs_eff_histo?campaign_id={{c.campaign_id}}&tmax={{tmaxs}}"><i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Efficiency Histogram</a>
+              </div>
+              <div class=item>
+                <a href="{{pomspath}}/campaign_sheet?campaign_id={{c.campaign_id}}&tmax={{tmaxs}}"><i class="external table icon" data-content="Campaign Spreadsheet" data-variation="basic"></i>Day by Day Spreadsheet</a>
+              </div>
+              <div class=item>
+                <a href="{{pomspath}}/campaign_time_bars?campaign_id={{c.campaign_id}}&tmin={{tmins}}&tmax={{tmaxs}}"><i class="external tasks icon" data-content="Tasks in Campaign Time Bars" data-variation="basic"></i>Task Time Bars</a>
+              </div>
+              <div class=item>
+		<a href="{{pomspath}}/inflight_files?campaign_id={{c.campaign_id}}"><i class="external plane icon" data-content="In-Flight File Information" data-variation="basic"></i>Inflight Files</a>
+              </div>
+              <div class=item>
+		<a href="{{pomspath}}/actual_pending_files?campaign_id={{c.campaign_id}}"><i class="external spinner icon" data-content="Pending File Information" data-variation="basic"></i>Pending Files for Recent Jobs</a>
+              </div>
+              <div class=item>
+		<a href="{{pomspath}}/schedule_launch?campaign_id={{c.campaign_id}}"><i class="external calendar icon" data-content="Schedule Future Launches" data-variation="basic"></i>Schedule Future Job Launches</a>
+              </div>
+              <div class=item>
+		<a href="{{pomspath}}/campaign_info?campaign_id={{c.campaign_id}}"><i class="external info circle icon" data-content="Campaign Information" data-variation="basic"></i>Campaign Information</a>
+              </div>
+              <div class=item>
+		<a target="_blank" href="{{pomspath}}/launch_jobs?campaign_id={{c.campaign_id}}"><i class="external rocket icon" data-content="Immediately Launch Tasks for Campaign" data-variation="basic"></i>Launch Campaign Jobs Now</a>
+              </div>
+              <div class=item>
+		<a target="_blank" href="{{pomspath}}/kill_jobs?campaign_id={{c.campaign_id}}"><i class="external trash icon" data-content="Kill jobs in Campaign" data-variation="basic"></i>Kill Jobs for Campaign</a>
+               </div>
+              </div>
+             </div>
+            </div>
             </td>
             <td>{{c.experiment}}</td>
             <td>{{c.name}}</td>
@@ -130,6 +157,9 @@ $('.external')
       hide: 80
     }
   })
+;
+$('.ui.dropdown')
+  .dropdown()
 ;
 </script>
 
